# royal-mail-click-and-drop

./: .gitignore  .gitlab-ci.yml  .openapi-generator-ignore  .travis.yml  README.md  README_AUTO.md  pyproject.toml  setup.py
.openapi-generator/: FILES
docs/: AddressRequest.md  BillingDetailsRequest.md  CreateOrderErrorResponse.md  CreateOrderLabelErrorResponse.md  CreateOrderRequest.md  CreateOrderResponse.md  CreateOrdersRequest.md  CreateOrdersResponse.md  DeleteOrdersResource.md  DeletedOrderInfo.md  DimensionsRequest.md  ErrorResponse.md  FailedOrderResponse.md  GetOrderDetailsResource.md  GetOrderInfoResource.md  GetOrderLineResult.md  GetOrdersDetailsResponse.md  GetOrdersResponse.md  GetPostalDetailsResult.md  GetShippingDetailsResult.md  GetTagDetailsResult.md  GetVersionResource.md  Importer.md  LabelGenerationRequest.md  LabelsApi.md  ManifestDetailsResponse.md  ManifestErrorsErrorDetailsResponse.md  ManifestErrorsResponse.md  ManifestOrdersResponse.md  ManifestsApi.md  OrderErrorInfo.md  OrderErrorResponse.md  OrderFieldResponse.md  OrderUpdateError.md  OrdersApi.md  PostageDetailsRequest.md  ProductItemRequest.md  RecipientDetailsRequest.md  SenderDetailsRequest.md  ShipmentPackageRequest.md  (+6 more)
openapi_client/: __init__.py  api_client.py  configuration.py  rest.py
test/: test_address_request.py  test_billing_details_request.py  test_create_order_error_response.py  test_create_order_label_error_response.py  test_create_order_request.py  test_create_order_response.py  test_create_orders_request.py  test_create_orders_response.py  test_deleted_order_info.py  (+37 more)
(+141 files in other folders)
