[project]
name = "royal_mail_click_and_drop"
version = "0.0.2"
description = "Royal Mail Click and Drop Client"
authors = [
    { name = "pawrequest", email = "royal_mail+pawrequest@users.noreply.github.com" }
]
license = "NoLicense"
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "urllib3 >= 2.1.0, < 3.0.0",
    "python-dateutil >= 2.8.2",
    "pydantic >= 2",
    "typing-extensions >= 4.7.1"
]
[dependency-groups]
dev = [
    "pytest >= 7.2.1",
    "pytest-cov >= 2.8.1",
    "tox >= 3.9.0",
    "flake8 >= 4.0.0",
    "types-python-dateutil >= 2.8.19.14",
    "mypy >= 1.5"
]
